# pkg/api/v1beta2/conversion.go
@@ -980,6 +980,9 @@ func init() {
 			if err := s.Convert(&in.GitRepo, &out.GitRepo, 0); err != nil {
 				return err
 			}
+			if err := s.Convert(&in.ISCSIDisk, &out.ISCSIDisk, 0); err != nil {
+				return err
+			}
 			if err := s.Convert(&in.GCEPersistentDisk, &out.GCEPersistentDisk, 0); err != nil {
 				return err
 			}
@@ -999,6 +1002,9 @@ func init() {
 				return err
 			}
 			if err := s.Convert(&in.GCEPersistentDisk, &out.GCEPersistentDisk, 0); err != nil {
+				return err
+			}
+			if err := s.Convert(&in.ISCSIDisk, &out.ISCSIDisk, 0); err != nil {
 				return err
 			}
 			if err := s.Convert(&in.HostDir, &out.HostPath, 0); err != nil {
